# s3util-rs

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  build.rs
.cargo/: config.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  custom.md  feature_request.md
.github/workflows/: cd.yml
docs/superpowers/plans/: 2026-04-14-s3util-cp.md  2026-04-17-e2e-test-parity-with-s3sync.md  2026-04-18-e2e-stdio-enhancement.md  2026-04-18-stdio-streaming-multipart.md  2026-04-19-s3-to-local-parallel-downloads.md  2026-04-19-s3-to-local-write-time-progress.md  2026-04-20-cli-traversal-guard-rework.md  2026-04-20-source-no-sign-request.md  2026-04-25-v0.2.0-pr1-foundation.md  2026-04-28-bucket-config-subcommands.md  2026-04-28-bucket-website-logging-notification.md
docs/superpowers/specs/: 2026-04-14-s3util-cp-design.md  2026-04-17-e2e-test-parity-with-s3sync-design.md  2026-04-18-e2e-stdio-enhancement-design.md  2026-04-18-stdio-streaming-multipart-design.md  2026-04-19-s3-to-local-parallel-downloads-design.md  2026-04-19-s3-to-local-write-time-progress-design.md  2026-04-20-cli-arg-target-directory-validation-design.md  2026-04-20-cli-traversal-guard-rework-design.md  2026-04-20-source-no-sign-request-design.md  2026-04-21-e2e-stats-assertion-coverage-design.md  (+2 more)
src/: lib.rs
src/callback/: mod.rs
src/config/: mod.rs
src/input/: json.rs  mod.rs
src/output/: json.rs  mod.rs
src/storage/: additional_checksum_verify.rs  annotation.rs  checksum.rs  e_tag_verify.rs  mod.rs
src/transfer/: first_chunk.rs  local_to_s3.rs  mod.rs  progress.rs  s3_to_local.rs  s3_to_s3.rs  s3_to_stdio.rs  stdio_to_s3.rs
src/types/: async_callback.rs  error.rs  mod.rs
tests/: cli_arg_validation.rs  cli_command_api_mapping.rs  cli_config_validation_error.rs  cli_create_bucket.rs  cli_delete_bucket.rs  cli_delete_bucket_cors.rs  cli_delete_bucket_encryption.rs  cli_delete_bucket_lifecycle_configuration.rs  cli_delete_bucket_policy.rs  cli_delete_bucket_replication.rs  cli_delete_bucket_tagging.rs  cli_delete_bucket_website.rs  cli_delete_object_annotation.rs  cli_delete_object_tagging.rs  cli_delete_public_access_block.rs  cli_dry_run.rs  cli_get_bucket_accelerate_configuration.rs  cli_get_bucket_cors.rs  cli_get_bucket_encryption.rs  cli_get_bucket_lifecycle_configuration.rs  cli_get_bucket_logging.rs  cli_get_bucket_notification_configuration.rs  cli_get_bucket_policy.rs  cli_get_bucket_policy_status.rs  cli_get_bucket_replication.rs  cli_get_bucket_request_payment.rs  cli_get_bucket_tagging.rs  cli_get_bucket_versioning.rs  cli_get_bucket_website.rs  cli_get_object_annotation.rs  cli_get_object_tagging.rs  cli_get_public_access_block.rs  cli_head_bucket.rs  cli_head_object.rs  cli_list_object_annotations.rs  cli_presign.rs  cli_put_bucket_accelerate_configuration.rs  cli_put_bucket_cors.rs  cli_put_bucket_encryption.rs  cli_put_bucket_lifecycle_configuration.rs  (+75 more)
tests/common/: mod.rs
(+82 files in other folders)
