[package]
name = "s3util-rs"
version = "0.1.0"
edition = "2024"
authors = ["nidor1998 <nidor1998@gmail.com>"]
description = "S3 utility commands (cp, mv, rm, etc.)"
license = "Apache-2.0"
rust-version = "1.91.1"

[[bin]]
name = "s3util"
path = "src/bin/s3util/main.rs"

[dependencies]
anyhow = { version = "1.0.102" }
async-trait = "0.1.89"
async-channel = "2.5.0"
# Disable default features on aws-config and aws-sdk-s3 to drop the legacy
# `rustls` alias that pulls rustls 0.21 (vulnerable rustls-webpki 0.101.x,
# RUSTSEC-2026-0098). The modern `default-https-client` feature, which uses
# rustls 0.23 via `aws-smithy-http-client`, is re-enabled explicitly.
aws-config = { version = "1.8.16", default-features = false, features = ["behavior-version-latest", "default-https-client", "rt-tokio", "credentials-process", "sso"] }
aws-runtime = "1.7.3"
aws-sdk-s3 = { version = "1.131.0", default-features = false, features = ["sigv4a", "http-1x", "default-https-client", "rt-tokio"] }
aws-smithy-runtime-api = "1.12.0"
aws-smithy-types = { version = "1.4.7" }
aws-smithy-types-convert = { version = "0.60.14", features = ["convert-chrono"] }
aws-types = "1.3.15"
base64 = "0.22.1"
bitflags = "2.11.1"
byte-unit = "5.2.0"
cfg-if = "1.0.4"
clap = { version = "4.6.1", features = ["derive", "env", "cargo", "string"] }
clap_complete = "4.6.2"
clap-verbosity-flag = "3.0.4"
chrono = "0.4.44"
crc32c = "0.6.8"
crc32fast = "1.5.0"
crc-fast = "1.9.0"
dyn-clone = "1.0.20"
filetime = "0.2.27"
futures = "0.3.32"
futures-util = "0.3.32"
hex = "0.4.3"
http-body-util = "0.1.3"
hyper = "1.9.0"
indicatif = "0.18.4"
leaky-bucket = "1.1.2"
log = "0.4.29"
md5 = "0.8.0"
mime_guess = "2.0.5"
percent-encoding = "2.3.2"
pin-project = "1.1.11"
regex = "1.12.3"
sha1 = "0.11.0"
sha2 = "0.11.0"
simple_moving_average = "1.0.2"
tempfile = "3.27.0"
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = ["full"] }
tokio-util = "0.7.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json", "local-time"] }
url = "2.5.8"
urlencoding = "2.1.3"
zeroize = "1.8.2"
zeroize_derive = "1.4.3"

# Build info (git commit, rustc version, target triple) — captured at
# build time and shown in the --version output.
shadow-rs = { version = "2.0.0", optional = true }

[build-dependencies]
shadow-rs = { version = "2.0.0", optional = true }

[features]
default = ["version"]
version = ["dep:shadow-rs"]

[dev-dependencies]
nix = { version = "0.31.2", features = ["user", "process", "signal"] }
once_cell = "1.21.4"
uuid = { version = "1.23.1", features = ["v4"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)', 'cfg(e2e_test)'] }

[profile.release]
debug = 1
panic = "unwind"
opt-level = 3
strip = "symbols"
lto = "fat"
codegen-units = 1

[profile.release-min-size]
inherits = "release"
debug = 0
panic = "abort"
opt-level = "z"
